trunk/Archive2/2a/0a1e268510c75f/output
main.cpp: In instantiation of 'class Foo<float>':
main.cpp:30:13:   required from here
main.cpp:20:2: error: no type named 'type' in 'struct std::enable_if<false, void>'
  Foo(T value1 = 50, T value2 = -50) :value1_(value1), value2_(value2){}
  ^
main.cpp: In instantiation of 'class Foo<int>':
main.cpp:33:11:   required from here
main.cpp:24:2: error: no type named 'type' in 'struct std::enable_if<false, void>'
  Foo(T value1 = 0.5, T value2 = -0.5,void* dummy=0) : value1_(value1), value2_(value2){}
  ^
